Position cross at right on safari Fix safari animation bug

--- a/src/app/design/frontend/Scandiweb/pwa/src/app/component/DragBar/DragBar.style.scss
+++ b/src/app/design/frontend/Scandiweb/pwa/src/app/component/DragBar/DragBar.style.scss
@@ -14,6 +14,10 @@
     z-index: 1000;
     position: relative;
 
+    &-Close {
+        order: 666;
+    }
+
     &-Draggable {
         --draggable-y: 0;
         --open-bounce-speed: 500ms;
@@ -24,19 +28,17 @@
         position: fixed;
         width: 100%;
         will-change: transform, top;
-        top: calc(100% - 110px);
+        top: calc(100vh - 110px);
         transition-duration: var(--animation-speed);
         transition-property: transform, top;
         transform: translate3d(0, var(--draggable-y), 0);
-        max-height: 100%;
+        max-height: calc(100vh - 50px);
 
         overflow: var(--overflow);
         overscroll-behavior: contain;
         scroll-behavior: smooth;
 
         &_areDetailsOpen {
-            max-height: calc(100% - 60px);
-
             // TODO figure out without important
             &::before {
                 content: none !important;
